# src/main/java/com/danielcontador/onebox_technical_test/controller/CartController.java
@@ -1,8 +1,8 @@
 package com.danielcontador.onebox_technical_test.controller;
 
-import com.danielcontador.onebox_technical_test.dto.ProductDto;
+import com.danielcontador.onebox_technical_test.dto.request.ProductDto;
+import com.danielcontador.onebox_technical_test.dto.response.DeleteResponse;
 import com.danielcontador.onebox_technical_test.entity.Cart;
-import com.danielcontador.onebox_technical_test.response.DeleteResponse;
 import com.danielcontador.onebox_technical_test.service.CartService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -16,7 +16,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.UUID;
 
 @RestController
-@RequestMapping("/api/v1")
+@RequestMapping("/api/v1/carts")
 @Tag(name = "Cart Controller", description = "Operations related to shopping carts, including creation, viewing, " +
         "modifying cart contents, and deletion.")
 public class CartController {
@@ -31,7 +31,7 @@ public class CartController {
     @Operation(summary = "Creates a new cart",
             description = "This endpoint creates a new, empty cart."
     )
-    @PostMapping("/create/cart")
+    @PostMapping()
     private ResponseEntity<Cart> createCart() {
         Cart cartCreated = cartService.createCart();
         return ResponseEntity.status(HttpStatus.CREATED).body(cartCreated);
@@ -42,7 +42,7 @@ public class CartController {
             description = "This endpoint retrieves the cart with the given ID. You must provide a valid cart " +
                     "ID to fetch the details."
     )
-    @GetMapping("/carts/{id}")
+    @GetMapping("/{id}")
     private Cart getCart(@Parameter(description = "ID of the cart to retrieve", required = true) @PathVariable UUID id) {
         return cartService.getCart(id);
     }
@@ -51,7 +51,7 @@ public class CartController {
             description = "This endpoint adds a product to an existing cart. You must provide the cart ID " +
                     "and a ProductDto in the body."
     )
-    @PutMapping("/add/{cartId}")
+    @PutMapping("/{cartId}")
     private Cart addProduct(
             @Parameter(description = "The ID of the cart to add the product to", required = true) @PathVariable UUID cartId,
             @Parameter(description = "The Product DTO", required = true) @Valid @RequestBody ProductDto productDto) {
@@ -61,7 +61,7 @@ public class CartController {
     @Operation(summary = "Deletes a cart by its ID",
             description = "This endpoint deletes a cart. You must provide the cart ID."
     )
-    @DeleteMapping("/delete/cart/{cartId}")
+    @DeleteMapping("/{cartId}")
     private DeleteResponse deleteCart(
             @Parameter(description = "The ID of the cart to delete", required = true) @PathVariable UUID cartId) {
         return cartService.deleteCart(cartId);
